more like authorization form

--- a/resources/assets/less/bem/authorized-client.less
+++ b/resources/assets/less/bem/authorized-client.less
@@ -21,8 +21,9 @@
   flex-direction: row;
   justify-content: space-between;
 
-  padding: 10px;
+  padding: 10px 30px 20px;
   color: #999;
+  border-top: 2px solid #111;
 
   &__actions {
     align-items: flex-start;
@@ -57,5 +58,9 @@
   &__name {
     font-size: larger;
     color: #eee;
+  }
+
+  &__scopes {
+    margin-top: 12px;
   }
 }
