Colour update for BeatmapSet page (bbcode formatting pending)

--- a/resources/assets/less/bem/bar.less
+++ b/resources/assets/less/bem/bar.less
@@ -35,7 +35,7 @@
 
   &--beatmap-success-rate {
     height: 5px;
-    background-color: #ddd;
+    background-color: @osu-colour-b6;
     margin-top: 5px;
   }
 
