--- a/resources/assets/less/bem/beatmapset-info.less
+++ b/resources/assets/less/bem/beatmapset-info.less
@@ -24,6 +24,7 @@
   @header-margin--bottom: 5px;
 
   font-size: @font-size--normal;
+  color: white;
 
   display: flex;
   flex-direction: column;
