--- a/resources/assets/less/bem/comment-vote.less
+++ b/resources/assets/less/bem/comment-vote.less
@@ -28,7 +28,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #ddd;
+  background-color: @osu-colour-b6;
 
   &:not([disabled]):hover {
     border-color: @_bg;
