--- a/resources/assets/less/bem/comment.less
+++ b/resources/assets/less/bem/comment.less
@@ -28,8 +28,9 @@
 
   margin-top: @_spacing;
   font-size: @font-size--normal-2;
-  color: #555;
-  border-bottom: 0 solid #ddd;
+  color: white;
+  border-bottom: 0 solid @osu-colour-b3;
+  background-color: @osu-colour-b5;
 
   &--top {
     border-bottom-width: 1px;
