--- a/resources/assets/less/bem/osu-page.less
+++ b/resources/assets/less/bem/osu-page.less
@@ -115,7 +115,7 @@
 
   &--generic {
     .default-box-shadow();
-    background-color: #fff;
+    background-color: @osu-colour-b5;
     padding: 20px;
     margin-bottom: 10px;
   }
