--- a/resources/assets/less/bem/show-more-link.less
+++ b/resources/assets/less/bem/show-more-link.less
@@ -89,6 +89,10 @@
     color: @osu-colour-b1;
     margin: 0 5px;
 
+    .@{_top}:hover & {
+      color: @osu-colour-l1;
+    }
+
     .@{_top}--notification-group & {
       color: #fff;
     }
