--- a/resources/assets/less/functions.less
+++ b/resources/assets/less/functions.less
@@ -142,6 +142,14 @@
   });
 }
 
+.link-inverted() {
+  color: white;
+
+  .link-hover({
+    color: @osu-colour-l1;
+  });
+}
+
 .link-gray-dark() {
   color: #555;
 
