--- a/resources/assets/less/functions.less
+++ b/resources/assets/less/functions.less
@@ -34,7 +34,7 @@
   ::-webkit-scrollbar {
     width: 10px; /* 1px wider than Lion. */
     /* This is more usable for users trying to click it. */
-    background-color: rgba(255,255,255,0);
+    background-color: rgba(255, 255, 255, 0.025);
     -webkit-border-radius: 100px;
   }
   /* hover effect for both scrollbar area, and scrollbar 'thumb' */
