--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -211,6 +211,7 @@
 @import "bem/notification-popup-item-group";
 @import "bem/notification-type-group";
 @import "bem/oauth-form";
+@import "bem/oauth-scopes";
 @import "bem/osu-checkbox";
 @import "bem/osu-layout";
 @import "bem/osu-md";
