--- a/resources/assets/less/bem/authorized-client.less
+++ b/resources/assets/less/bem/authorized-client.less
@@ -43,16 +43,16 @@
 
     background-color: @red;
 
-    .link-hover({
+    &:hover {
       background-color: @red-light;
-    });
+    };
 
     &--revoked {
       background-color: #444;
 
-      .link-hover({
+      &:hover {
         background-color: #444;
-      });
+      };
     }
   }
 
