Colour update for Beatmap Modding

--- a/resources/assets/less/bem/bar.less
+++ b/resources/assets/less/bem/bar.less
@@ -46,7 +46,7 @@
   }
 
   &--beatmapset-nomination-off {
-    background-color: #222;
+    background-color: @osu-colour-b6;
   }
 
   &--beatmapset-nomination-off-light {
