--- a/resources/assets/less/bem/beatmap-discussion-new.less
+++ b/resources/assets/less/bem/beatmap-discussion-new.less
@@ -22,7 +22,7 @@
 
   .default-box-shadow();
   display: flex;
-  background-color: #fff;
+  background-color: @osu-colour-b4;
   flex-direction: column;
 
   &__avatar {
@@ -39,7 +39,7 @@
   &__footer {
     display: flex;
     flex-wrap: wrap;
-    background-color: #555;
+    background-color: @osu-colour-b5;
     padding: 5px @_side-padding;
     justify-content: space-between;
 
@@ -74,6 +74,7 @@
   }
 
   &__message-area {
+    color: white;
     .reset-input();
     resize: vertical;
     width: 100%;
@@ -82,6 +83,10 @@
 
     flex: 1 0 auto;
     font-size: @font-size--phone-input;
+
+    &::placeholder {
+      color: @osu-colour-b1;
+    }
 
     @media @desktop {
       font-size: inherit;
@@ -124,7 +129,7 @@
     padding: 10px;
     font-size: @font-size--small-2;
     color: #fff;
-    background-color: #777;
+    background-color: @osu-colour-b3;
     border-radius: 0 @border-radius-base @border-radius-base 0;
 
     @media @mobile {
@@ -132,7 +137,7 @@
     }
 
     &--label {
-      background-color: #333;
+      background-color: @osu-colour-b6;
       border-radius: @border-radius-base 0 0 @border-radius-base;
       flex-grow: 0;
     }
