--- a/resources/assets/less/bem/page-extra-tabs.less
+++ b/resources/assets/less/bem/page-extra-tabs.less
@@ -21,9 +21,9 @@
   top: @nav2-height--pinned;
   z-index: 1;
 
-  background-color: #111;
+  background-color: @osu-colour-b5;
 
-  border-bottom: 1px solid @yellow;
+  border-bottom: 1px solid @osu-colour-u;
 
   @media @mobile {
     top: @navbar-height;
