--- a/resources/assets/less/bem/beatmap-discussion-message-length-counter.less
+++ b/resources/assets/less/bem/beatmap-discussion-message-length-counter.less
@@ -21,6 +21,7 @@
   font-size: @font-size--normal;
   text-align: right;
   margin-top: 5px;
+  color: @osu-colour-b1;
 
   &--almost-over {
     color: @yellow-dark;
