--- a/resources/assets/less/bem/beatmap-discussions.less
+++ b/resources/assets/less/bem/beatmap-discussions.less
@@ -21,10 +21,11 @@
   @_timeline-line-width: 3px;
   @_discussions-vertical-padding: 10px;
   @_discussions-horizontal-padding: 20px;
+  @_timeline-colour: @osu-colour-b6;
 
   .default-box-shadow();
   margin-bottom: 10px;
-  background-color: #fff;
+  background-color: @osu-colour-b4;
   display: flex;
   flex-direction: column;
 
@@ -34,7 +35,7 @@
 
   &__discussions {
     padding: @_discussions-vertical-padding @_discussions-horizontal-padding;
-    background-color: #eee;
+    background-color: @osu-colour-b5;
 
     &--empty {
       font-size: @font-size--normal;
@@ -54,7 +55,7 @@
 
   &__mode-circle {
     .circle(@_mode-circle-diameter);
-    background-color: #555;
+    background-color: @_timeline-colour;
   }
 
   &__mode-text {
@@ -71,7 +72,7 @@
 
     margin: 0 ((@_mode-circle-diameter - @_timeline-line-width) / 2);
 
-    background-color: #555;
+    background-color: @_timeline-colour;
 
     &--half {
       height: 50%;
@@ -86,7 +87,6 @@
     padding: 0 15px;
     display: flex;
     flex-direction: column;
-    border-bottom: 1px solid #ccc;
 
     @media @desktop {
       flex-direction: row;
@@ -110,12 +110,12 @@
       .link-plain();
       .default-border-radius();
       font-size: @font-size--normal;
-      color: #555;
+      color: @osu-colour-l1;
       padding: 5px 10px;
 
       &:hover {
-        color: #555;
-        background-color: #eee;
+        color: white;
+        background-color: @osu-colour-b3;
       }
     }
   }
