--- a/resources/assets/less/bem/beatmapset-discussion-message.less
+++ b/resources/assets/less/bem/beatmapset-discussion-message.less
@@ -19,30 +19,26 @@
 .beatmapset-discussion-message {
   @_top: beatmapset-discussion-message;
   display: inline;
+  color: white;
+
+  // TODO: remove once default link style becomes... default
+  > a {
+    .link-default();
+  }
 
   &__timestamp {
     .link-plain();
 
     border-radius: @border-radius-large;
     padding: 1px 5px;
-    background-color: #eee;
+    background-color: @osu-colour-b5;
     font-weight: 600;
     font-size: 85%;
-    color: #444;
+    color: @osu-colour-b2;
 
     .link-hover({
-      background-color: #ddd;
-      color: #444;
+      background-color: @osu-colour-b4;
+      color: @osu-colour-b1;
     });
-
-    .@{_top}--white & {
-      background-color: #555;
-      color: #eee;
-
-      .link-hover({
-        background-color: #666;
-        color: #eee;
-      });
-    }
   }
 }
