--- a/resources/assets/less/bem/beatmapset-status.less
+++ b/resources/assets/less/bem/beatmapset-status.less
@@ -29,7 +29,7 @@
   .fade-element(@hover-transition-duration);
 
   &--hype {
-    background-color: #555;
+    background-color: @osu-colour-b3;
   }
 
   &--show {
