--- a/resources/assets/less/bem/osu-page.less
+++ b/resources/assets/less/bem/osu-page.less
@@ -122,7 +122,7 @@
 
   &--generic-compact {
     .default-box-shadow();
-    background-color: #fff;
+    background-color: @osu-colour-b5;
     margin-bottom: 10px;
   }
 
