Colour tweaks for Beatmap and Modding pages

--- a/resources/assets/less/bem/osu-layout.less
+++ b/resources/assets/less/bem/osu-layout.less
@@ -307,7 +307,7 @@
     &--extra {
       .inner-shadow-top();
       flex: 1 0 auto;
-      background-color: fade(#000, 40%);
+      background-color: .osu-hsla(@osu-colour-b6, 0.5)[@hsla];
       padding: 10px 0;
     }
 
