--- a/resources/assets/less/functions.less
+++ b/resources/assets/less/functions.less
@@ -106,7 +106,7 @@
   &::before {
     .full-size();
     content: ' ';
-    background-image: linear-gradient(fade(#000, 30%), fade(#000, 80%));
+    background-image: linear-gradient(.osu-hsla(@osu-colour-b6, 0.3)[@hsla], .osu-hsla(@osu-colour-b6, 0.8)[@hsla]);
   }
 }
 
