--- a/resources/assets/less/bem/beatmapset-status.less
+++ b/resources/assets/less/bem/beatmapset-status.less
@@ -17,7 +17,7 @@
  */
 
 .beatmapset-status {
-  background: fade(#000, 50%);
+  background-color: .osu-hsla(@osu-colour-b6, 0.5)[@hsla];
   padding: 6px 15px;
   border-radius: 1000px;
   font-size: @font-size--normal;
