--- a/resources/assets/less/bem/page-mode-link.less
+++ b/resources/assets/less/bem/page-mode-link.less
@@ -79,12 +79,8 @@
     font-size: 80%;
     font-weight: bold;
     margin-left: 5px;
-    background-color: @link-gray-light;
-    color: #555;
-
-    .@{top}:hover & {
-      background-color: @link-gray-light-hover;
-    }
+    background-color: @osu-colour-b2;
+    color: @osu-colour-b5;
   }
 
   &__stripe {
