Fix forum background

--- a/resources/assets/less/bem/osu-page.less
+++ b/resources/assets/less/bem/osu-page.less
@@ -98,6 +98,12 @@
     }
   }
 
+  &--forum-compact {
+    .default-box-shadow();
+    background-color: white;
+    margin-bottom: 10px;
+  }
+
   &--forum-topic-feature-vote {
     .default-box-shadow();
     background-color: #fff;
