Set admin section to fixed white background

--- a/resources/assets/less/bem/osu-page.less
+++ b/resources/assets/less/bem/osu-page.less
@@ -124,6 +124,10 @@
     background-color: @osu-colour-b5;
     padding: 20px;
     margin-bottom: 10px;
+
+    .osu-layout--admin & {
+      background-color: white;
+    }
   }
 
   &--generic-compact {
