--- a/resources/assets/less/bem/osu-layout.less
+++ b/resources/assets/less/bem/osu-layout.less
@@ -219,6 +219,10 @@
       ._page;
       padding: 20px;
       margin-bottom: 10px;
+
+      .osu-layout--admin & {
+        background-color: white;
+      }
     }
 
     &--page-artist-index {
