Colour update for User Profiles

--- a/resources/assets/less/bbcode.less
+++ b/resources/assets/less/bbcode.less
@@ -25,10 +25,7 @@
 
   a {
     .@{_top}--profile-page& {
-      color: @blue;
-      .link-hover({
-        color: @blue-light;
-      });
+      .link-default();
     }
   }
 
@@ -81,8 +78,8 @@
     margin: 0;
 
     .@{_top}--profile-page& {
-      background-color: #333;
-      border-color: #444;
+      background-color: @osu-colour-b6;
+      border-color: @osu-colour-b6;
     }
   }
 
