--- a/resources/assets/less/bem/beatmap-playcount.less
+++ b/resources/assets/less/bem/beatmap-playcount.less
@@ -80,13 +80,13 @@
     flex: 1;
     min-width: 0;
     display: flex;
-    background-color: @greyseafoam-dark;
+    background-color: @osu-colour-b4;
     border-radius: @border-radius-large;
     margin-left: -@border-radius-large;
     padding: 10px;
 
     .@{_top}:hover & {
-      background-color: @greyseafoam;
+      background-color: @osu-colour-b3;
     }
   }
 
@@ -109,15 +109,15 @@
   }
 
   &__mapper {
-    color: @greyseafoam-lighter;
+    color: @osu-colour-b1;
   }
 
   &__mapper-link {
     font-weight: bold;
-    color: @greyseafoam-lighter;
+    color: @osu-colour-b1;
 
     .link-hover({
-      color: @greyseafoam-lighter;
+      color: @osu-colour-l1;
     });
   }
 
