--- a/resources/assets/less/bem/line-chart.less
+++ b/resources/assets/less/bem/line-chart.less
@@ -47,7 +47,7 @@
     .@{_top}--profile-page & {
       .circle(@_marker-radius-profile-page * 2);
       background-color: @greyseafoam-darker;
-      border-color: @yellow;
+      border-color: @osu-colour-u;
       border-width: (@_line-width-profile-page * 2);
       top: (-@_marker-radius-profile-page);
       left: (-@_marker-radius-profile-page);
@@ -63,7 +63,7 @@
     left: (-@_line-width / 2);
 
     .@{_top}--profile-page & {
-      background-color: @yellow;
+      background-color: @osu-colour-u;
       width: @_line-width-profile-page;
       left: (-@_line-width-profile-page / 2);
     }
@@ -74,7 +74,7 @@
     left: 0;
     top: 0;
     margin: 5px;
-    background-color: @greyseafoam-dark;
+    background-color: @osu-colour-b6;
     padding: 10px;
     border-radius: 10px;
     font-size: @font-size--normal;
@@ -96,7 +96,7 @@
 
     &--x {
       .@{_top}--profile-page & {
-        color: @greyseafoam-lighter;
+        color: @osu-colour-l1;
         order: 1;
       }
       .@{_top}--status-page & {
@@ -120,7 +120,7 @@
     stroke-width: @_line-width;
 
     .@{_top}--profile-page & {
-      stroke: @yellow;
+      stroke: @osu-colour-u;
       stroke-width: @_line-width-profile-page;
     }
   }
@@ -158,7 +158,7 @@
     }
 
     .@{_top}--profile-page & {
-      fill: @greyseafoam-lighter;
+      fill: @osu-colour-b1;
     }
   }
 }
