--- a/resources/assets/less/bem/nav2-header.less
+++ b/resources/assets/less/bem/nav2-header.less
@@ -61,7 +61,7 @@
 
   &__transition-overlay {
     .full-size();
-    background-color: #222;
+    background-color: @osu-colour-b6;
     opacity: 0;
     transition: opacity @header-pinned-animation-duration;
 
