--- a/resources/assets/less/bem/osu-layout.less
+++ b/resources/assets/less/bem/osu-layout.less
@@ -330,7 +330,7 @@
 
     &--users-extra {
       flex: 1 0 auto;
-      background-color: #111;
+      background-color: @osu-colour-b6;
       padding: 10px 0;
     }
   }
