--- a/resources/assets/less/bem/page-extra-tabs.less
+++ b/resources/assets/less/bem/page-extra-tabs.less
@@ -30,8 +30,8 @@
   }
 
   &--profile-page {
-    background-color: #111;
+    background-color: @osu-colour-b5;
     border-bottom-width: 2px;
-    border-bottom-color: @seafoam;
+    border-bottom-color: @osu-colour-u;
   }
 }
