--- a/resources/assets/less/bem/page-mode-link.less
+++ b/resources/assets/less/bem/page-mode-link.less
@@ -64,13 +64,9 @@
   }
 
   &--profile-page {
-    color: @seafoam;
+    color: white;
     font-size: @font-size--title-small-3;
     padding-top: 10px;
-
-    .link-hover({
-      color: #fff;
-    });
   }
 
   &__badge {
@@ -103,7 +99,7 @@
     }
 
     .@{top}--profile-page & {
-      background-color: @seafoam;
+      background-color: @osu-colour-u;
       height: 10px;
       bottom: -6px;
       border-radius: 10000px;
