--- a/resources/assets/less/bem/play-detail.less
+++ b/resources/assets/less/bem/play-detail.less
@@ -24,13 +24,12 @@
   @_padding-horizontal: 20px;
   @_menu-button-width: (@_padding-horizontal * 2);
   @_border-radius: 10px;
-  @_bg-main: @greyseafoam;
-  @_bg-main-hover: @greyseafoam-light;
-  @_bg-extra: @greyseafoam-dark;
-  @_bg-extra-hover: @greyseafoam;
+  @_bg-main: @osu-colour-b3;
+  @_bg-main-hover: @osu-colour-b2;
+  @_bg-extra-hover: @osu-colour-b3;
 
   border-radius: @_border-radius;
-  background-color: @greyseafoam-dark;
+  background-color: @osu-colour-b4;
   line-height: normal;
   color: #fff;
   font-size: @font-size--normal;
@@ -207,7 +206,7 @@
     flex: none;
     font-size: @font-size--title-small-3;
     font-weight: 700;
-    color: @greylime-lighter;
+    color: @osu-colour-u;
 
     @media @desktop {
       .center-content();
@@ -239,7 +238,7 @@
 
   &__pp-unit {
     font-size: @font-size--normal;
-    color: @community-user-green-dark;
+    color: @osu-colour-d;
   }
 
   &__score-detail {
@@ -271,7 +270,7 @@
   }
 
   &__time {
-    color: #999;
+    color: @osu-colour-b1;
     margin-left: 15px;
   }
 
