--- a/resources/assets/less/bem/profile-badges.less
+++ b/resources/assets/less/bem/profile-badges.less
@@ -25,7 +25,7 @@
   padding: (@padding-profile-page - @_padding) (@gutter-profile-page - @_padding);
   display: flex;
   flex-wrap: wrap;
-  background-color: @greyseafoam-darker;
+  background-color: @osu-colour-b5;
 
   @media @desktop {
     padding-left: (@gutter-profile-page-desktop - @_padding);
