--- a/resources/assets/less/bem/profile-detail-bar.less
+++ b/resources/assets/less/bem/profile-detail-bar.less
@@ -26,7 +26,7 @@
   padding: (@padding-profile-page - @_column-padding) (@gutter-profile-page - @_column-padding);
   justify-content: space-between;
   align-items: center;
-  background-color: @greyseafoam;
+  background-color: @osu-colour-b4;
 
   @media @desktop {
     height: 60px;
