--- a/resources/assets/less/bem/profile-page-toggle.less
+++ b/resources/assets/less/bem/profile-page-toggle.less
@@ -19,9 +19,9 @@
 .profile-page-toggle {
   .reset-input();
   .circle(40px);
-  background-color: @greyseafoam-light;
+  background-color: @osu-colour-b2;
 
   .link-hover({
-    background-color: darken(@greyseafoam-light, 5%);
+    background-color: @osu-colour-b1;
   });
 }
