--- a/resources/assets/less/bem/bar.less
+++ b/resources/assets/less/bem/bar.less
@@ -74,7 +74,7 @@
   &--user-profile {
     border-radius: 10000px;
     height: 6px;
-    background-color: #111;
+    background-color: @osu-colour-b6;
   }
 
   &__fill {
@@ -111,7 +111,7 @@
 
     .@{_top}--user-profile & {
       border-radius: 10000px;
-      background-color: @yellow;
+      background-color: @osu-colour-u;
     }
   }
 
