--- a/resources/assets/less/bem/bbcode-spoilerbox.less
+++ b/resources/assets/less/bem/bbcode-spoilerbox.less
@@ -22,12 +22,8 @@
 
   &__arrow {
     display: inline-block;
-    color: @gray;
+    color: @osu-colour-l1;
     margin-right: 5px;
-
-    .@{_profile-page} & {
-      color: #ccc;
-    }
 
     .@{_top}.js-spoilerbox--open & {
       transform: rotate(90deg);
@@ -45,27 +41,14 @@
       margin-top: 4px;
 
       .@{_profile-page} & {
-        background-color: #333;
+        background-color: @osu-colour-b6;
       }
     }
   }
 
   &__link {
     .reset-input();
-    color: #333;
+    .link-default();
     font-weight: bold;
-
-    .link-hover({
-      color: #111;
-      text-decoration: underline;
-    });
-
-    .@{_profile-page} & {
-      color: #ccc;
-
-      .link-hover({
-        color: #eee;
-      });
-    }
   }
 }
