--- a/resources/assets/less/bem/user-action-button.less
+++ b/resources/assets/less/bem/user-action-button.less
@@ -30,10 +30,10 @@
   text-align: center;
 
   font-size: @font-size--title-small;
-  background: fade(black, 70%);
+  background: @osu-colour-b6;
 
   &:hover {
-    background: fade(lighten(black, 5%), 70%);
+    background: @osu-colour-b5;
   }
 
   &--message {
