Beatmap discussion tweaks

--- a/resources/assets/less/bem/beatmap-discussion-post.less
+++ b/resources/assets/less/bem/beatmap-discussion-post.less
@@ -26,6 +26,8 @@
 
   @_content-gutter-base: 15px;
 
+  transition: background-color .1s ease-in-out;
+
   &--discussion {
     min-width: 0;
     flex: none;
@@ -44,6 +46,7 @@
     padding: 10px;
     display: flex;
     justify-content: flex-end;
+    background-color: transparent;
   }
 
   &--unread {
