--- a/resources/assets/less/bem/beatmap-discussion-vote.less
+++ b/resources/assets/less/bem/beatmap-discussion-vote.less
@@ -18,7 +18,7 @@
 
 .beatmap-discussion-vote {
   @top: beatmap-discussion-vote;
-  @_default-color: @osu-colour-b1;
+  @_default-color: white;
   .reset-input();
   .default-box-shadow();
   .default-border-radius();
@@ -35,7 +35,7 @@
 
   font-size: 12px;
 
-  background-color: @osu-colour-b2;
+  background-color: @osu-colour-b1;
 
   &:hover {
     .thick-box-shadow();
