--- a/resources/assets/less/bem/btn-osu-big.less
+++ b/resources/assets/less/bem/btn-osu-big.less
@@ -26,7 +26,7 @@
 
   display: inline-block;
 
-  background-color: @osu-colour-l2;
+  background-color: @osu-colour-l3;
   transition: background-color 120ms;
 
   padding: 5px;
@@ -42,7 +42,7 @@
   &:hover,
   &:active {
     color: #fff;
-    background-color: @osu-colour-l1;
+    background-color: @osu-colour-l2;
   }
 
   &[disabled] {
@@ -50,7 +50,7 @@
       .full-size();
       content: ' ';
       border-radius: inherit;
-      background-color: fade(#fff, 50%);
+      background-color: @osu-colour-b1;
     }
   }
 
