Tweak footer style

--- a/resources/assets/less/bem/footer.less
+++ b/resources/assets/less/bem/footer.less
@@ -19,11 +19,9 @@
 .footer {
   @top: footer;
 
-  .default-text-shadow();
   background-color: @osu-colour-b5;
-  background-image: linear-gradient(to bottom, .osu-hsla(@osu-colour-b5, 0.6)[@hsla] 0, transparent 4px);
 
-  color: #ccc;
+  color: @osu-colour-b1;
   font-size: 10px;
 
   display: flex;
