Abolish old colour themes (2016, 2018, 2018-community, 2019v1)

--- a/resources/assets/less/bem/chat-message-group.less
+++ b/resources/assets/less/bem/chat-message-group.less
@@ -98,7 +98,7 @@
   }
 
   &__message-status {
-    color: fade(@community-blue-lighter, 50%);
+    color: .osu-hsla(@osu-colour-u, 0.5)[@hsla];
     margin-left: 10px;
 
     &--errored {
