--- a/resources/assets/less/bem/line-chart.less
+++ b/resources/assets/less/bem/line-chart.less
@@ -46,7 +46,7 @@
 
     .@{_top}--profile-page & {
       .circle(@_marker-radius-profile-page * 2);
-      background-color: @greyseafoam-darker;
+      background-color: @osu-colour-b5;
       border-color: @osu-colour-u;
       border-width: (@_line-width-profile-page * 2);
       top: (-@_marker-radius-profile-page);
