--- a/resources/assets/less/bem/post-editor.less
+++ b/resources/assets/less/bem/post-editor.less
@@ -44,7 +44,7 @@
     }
 
     .@{_top}--profile-page & {
-      background-color: @greyseafoam-dark;
+      background-color: @osu-colour-b5;
       padding: 10px @gutter-profile-page;
 
       @media @desktop {
