--- a/resources/assets/less/bem/profile-page-button.less
+++ b/resources/assets/less/bem/profile-page-button.less
@@ -20,19 +20,19 @@
   .reset-input();
   font-size: @font-size--normal;
   border-radius: 10000px;
-  background-color: @greyseafoam-dark;
+  background-color: @osu-colour-b5;
   color: #fff;
   padding: 5px 20px;
 
   &:hover {
-    background-color: @greyseafoam;
+    background-color: @osu-colour-b4;
   }
 
   &[disabled] {
     color: #ccc;
 
     &:hover {
-      background-color: @greyseafoam-dark;
+      background-color: @osu-colour-b5;
     }
   }
 }
