--- a/resources/assets/less/bem/builds.less
+++ b/resources/assets/less/bem/builds.less
@@ -46,7 +46,7 @@
     padding: 0 0 30px;
 
     & + & {
-      border-top: 1px solid @greyviolet-darker;
+      border-top: 1px solid @osu-colour-b6;
     }
   }
 }
