--- a/resources/assets/less/bem/osu-page-header.less
+++ b/resources/assets/less/bem/osu-page-header.less
@@ -290,7 +290,7 @@
       font-style: normal;
       font-size: @font-size--new-header-title;
       font-weight: 300;
-      color: @osu-colour-l1;
+      color: @osu-colour-b6;
       text-shadow: none;
     }
 
